Fixing CSS issue, where gallery dialog was not visible.

--- a/modules/org.opencms.base/resources/system/workplace/editors/tinymce/opencms_plugin.css
+++ b/modules/org.opencms.base/resources/system/workplace/editors/tinymce/opencms_plugin.css
@@ -5,5 +5,6 @@ body.opencms_dialog .tox-dialog__header, body.opencms_dialog .tox-dialog__footer
 body.opencms_dialog .tox-dialog, body.opencms_dialog .tox-dialog div{
 	border: none;
  	background: transparent;
+ 	overflow: visible;
  }
 
